# robot1

./: .gitignore  README.md  theme.txt  vscode_ws.code-workspace
cpp/SpeedControl/: CMakeLists.txt  InternalOperation.h  SpeedControl.cpp  SpeedControl.h  SpeedControlCommand.cpp  SpeedControlCommand.h  SpeedControlOperation.h  SpeedControlStatus.h  keywords.txt  test_harness.ino  test_sketch.ino
cpp/SpeedControl/test_harness/: test_harness.ino
data/: blue_raw.txt  blue_recv.txt  purple_recv.txt  red_raw.txt  red_recv.txt
library_dev/speedControlTest/: Arduino.h  CMakeLists.txt  InternalOperation.cpp  InternalOperation.h  Print.h  QueueList.h  Servo.h  SpeedControl.cpp  SpeedControl.h  SpeedControlCommand.cpp  SpeedControlSpeed.h  main.cpp
prototype/datasheets/: .~lock.Arduino_Sensor_Shield_V5.doc#
prototype/sample_code/robot_car/bluetooth_blink/: bluetooth_blink.ino
prototype/sample_code/robot_car/bluetooth_car/: bluetooth_car.ino
reference/sample_code/robot_car/: com.shenyaocn.android.BlueSPP.apk
scripts/: .deploy_to_r2a1.sh.swp  addl_rpi_ssh_instructions.txt  arduino_cli_manpage.txt  arduino_refs_to_dl.txt  arduino_sketchbook_path.txt  build_arduino.sh  build_arduino_arm.sh  connect_r1  connect_r2  connect_r3v  connect_ros_port_r2.sh  deploy_to_r2a1.sh  find_robot_ips.sh  install_arduino.sh  rpi_enable_ssh.sh  set_arduino_sketchbook_path.sh  setup_rpi_py.sh  setup_rpi_py3.sh
scripts/preparerpi/: check_info_cookies.py  curl_next.sh  deploy_to_robot.py  robot_deploy.py  text_parser.py
sketches/: CMakeLists.txt  Makefile  TraverseCommand.h  ardSketches.mk  ardSketches.project  arduinoLibraries.mk  arduino_deploy.sh  arduino_verify.sh  set_arduino_sketchbook_path.sh  sketches.workspace  turret.project
sketches/.codelite/: .tern-port  compile_commands.json  refactoring.db  sketches.session  sketches.workspace.robot
sketches/AnalogRead_DigitalRead/: AnalogRead_DigitalRead.ino
sketches/InfraredLearner/: InfraredLearner.ino
sketches/IrClusterRtos/: IrClusterRtos.ino
sketches/IrDump/: IrDump.ino
sketches/IrRtos/: CMakeLists.txt  IrRtos.ino
sketches/OldReference/: oldIrRtos.ino
sketches/analogMotors/: analogMotors.ino
sketches/bug-cam/: InputValues.cpp  InputValues.h  ReadMe.adoc  bug-cam.ino  sketch.json
sketches/generated_examples/GsmWebServer/: GsmWebServer.ino
sketches/generated_examples/IR_Receiver_Module/: IR_Receiver_Module.ino
sketches/generated_examples/StateChangeDetection/: StateChangeDetection.ino
sketches/generated_examples/Sweep/: Sweep.ino
sketches/generated_examples/rawRecv/rawRecv/: rawRecv.ino
sketches/generated_examples/rawRecv/rawRecv/NewClass.h/: NewClass.h.ino
sketches/generated_examples/servo/: servo.ino
sketches/ledLowTests/Blink/: Blink.ino
sketches/libraries/Arduino_FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h  variantHooks.cpp
sketches/libraries/Arduino_FreeRTOS/examples/Blink_AnalogRead/: Blink_AnalogRead.ino
sketches/libraries/CppList/: CMakeLists.txt
sketches/libraries/FreeRTOS_AVR/examples/FreeRTOSBook/Example001/: Example001.ino
sketches/libraries/FreeRTOS_AVR/examples/FreeRTOSBook/Example002/: Example002.ino
sketches/libraries/FreeRTOS_AVR/examples/FreeRTOSBook/Example003/: Example003.ino
sketches/libraries/FreeRTOS_AVR/examples/FreeRTOSBook/Example004/: Example004.ino
sketches/libraries/FreeRTOS_AVR/examples/FreeRTOSBook/Example012/: Example012.ino
sketches/libraries/FreeRTOS_AVR/examples/frBlink/: frBlink.ino
sketches/libraries/IRLib2/: CMakeLists.txt  IRLib2.h  IRLibAll.h  IRLibRecvBase.cpp
sketches/libraries/IRLibProtocols/: CMakeLists.txt
sketches/libraries/IRLibRecvPCI/: CMakeLists.txt  IRLibRecvPCI.cpp  IRLibRecvPCI.h
sketches/libraries/IRremote/: CMakeLists.txt  IRremote.cpp  IRremote.h  IRremoteInt.h  IrReceiver.h
sketches/libraries/Indicator/: CMakeLists.txt  Indicator.cpp  Indicator.h
sketches/libraries/IrSensorCluster/: CMakeLists.txt  IrClusterStructs.h  IrSensorCluster.cpp  IrSensorCluster.h
sketches/libraries/IrTxRx/: CMakeLists.txt  IRremote.cpp  IRremote.h  IRremoteInt.h  IrInterrupt.h  IrInterruptConfig.h  IrParams.h  IrRcvrData.h  IrReceiver.cpp  IrReceiver.h  IrRxBase.cpp  IrRxBase.h  IrRxInterrupt.cpp  IrRxInterrupt.h  boarddefs.h  decode_results.h
sketches/libraries/PotMotor/: CMakeLists.txt  PotMotor.cpp  PotMotor.h
sketches/libraries/PotMotorRtos/: CMakeLists.txt  PotMotorRtos.cpp  PotMotorRtos.h
sketches/libraries/Robot1Common/: InterruptMap.h
sketches/libraries/Taskr/: CMakeLists.txt  Taskr.cpp  Taskr.h
sketches/libraries/TurretConfig/: CMakeLists.txt  CannonConfig.h  ElevationConfig.h  IndicatorConfig.h  IrConfig.h  TraverseConfig.h  TurretConfigPlacard.cpp  TurretConfigPlacard.h  TurretPins.h
sketches/libraries/TurretControllers/: CMakeLists.txt  CannonController.cpp  CannonController.h  CommandMonitor.cpp  CommandMonitor.h  ElevationController.cpp  ElevationController.h  IrCannonController.h  IrSensorMonitor.cpp  IrSensorMonitor.h  TraverseController.cpp  TraverseController.h  TurretController.cpp  TurretController.h  TurretTasks.cpp  TurretTasks.h
sketches/libraries/TurretState/: AckMessage.cpp  AckMessage.h  CMakeLists.txt  CannonCommand.h  CannonState.h  CommandMessages.h  CommandResult.h  CommandRxStatus.h  CommandStatus.h  ElevationCommand.h  ElevationCommands.h  ElevationState.h  TraverseCommand.h  TraverseState.h  TurretState.cpp  TurretState.h
sketches/rawRecv/: rawRecv.ino
sketches/rtosTest/: CMakeLists.txt  rtosTest.ino
sketches/servos/: servos.ino
sketches/speedControlDemo/: RobotStatus.h  speedControlDemo.ino
sketches/speedcontrol/: speedcontrol.ino
sketches/tests/: main.cpp  tests.project
sketches/turretBase/: turretBase.ino
sketches/turretDebug/: CMakeLists.txt  turretDebug.ino
sketches/turretDemo/: turretDemo.ino
sketches/turretFreeRtos/: CMakeLists.txt  TurretController.cpp  TurretController.h  turretFreeRtos.ino
sketches/turretRtos/: CMakeLists.txt  turretRtos.ino
sketches/turretTests/: servo.ino
sketches/turretTests/servo/: servo.ino
vscode_settings/: c_cpp_properties.json
(+8 files in other folders)
