cmake_minimum_required(VERSION 3.8)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/ArduinoToolchain.cmake)
set(PROJECT_NAME Turret)
project(${PROJECT_NAME})

include_directories(~/arduino-1.8.5/libraries/Servo/src)
include_directories(~/arduino-1.8.5/hardware/arduino/avr/cores/arduino)
include_directories(~/arduino-1.8.5/hardware/arduino/avr/variants/mega)

include_directories(libraries/IRLibProtocols)
include_directories(libraries/IRLib2)
include_directories(libraries/IRLibRecvPCI)

include_directories(libraries/CppList)
include_directories(libraries/Taskr)
include_directories(libraries/TurretConfig)
include_directories(libraries/TurretState)
include_directories(libraries/Indicator)
include_directories(libraries/PotMotorRtos)
include_directories(libraries/IrTxRx)
include_directories(libraries/TurretControllers)

add_subdirectory(libraries/IRLibProtocols)
add_subdirectory(libraries/IRLib2)
add_subdirectory(libraries/IRLibRecvPCI)

add_subdirectory(libraries/Arduino_FreeRTOS)
add_subdirectory(libraries/Taskr)
add_subdirectory(libraries/CppList)
add_subdirectory(libraries/TurretConfig)
add_subdirectory(libraries/TurretState)
add_subdirectory(libraries/Indicator)
add_subdirectory(libraries/PotMotorRtos)
add_subdirectory(libraries/IrTxRx)
add_subdirectory(libraries/TurretControllers)

add_subdirectory(turretRtos)
#add_subdirectory(IrRtos)

set(${CMAKE_PROJECT_NAME}_SKETCH turretRtos/turretRtos.ino)
#set(${CMAKE_PROJECT_NAME}_SKETCH IrRtos/IrRtos.ino)
#set(${CMAKE_PROJECT_NAME}_SKETCH IrClusterRtos/IrClusterRtos.ino)

target_include_directories(Arduino_FreeRTOS PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(IRLibProtocols PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(IRLib2 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(IRLibRecvPCI PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(CppList PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(Taskr PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(TurretState PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(TurretConfig PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(Indicator PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(PotMotorRtos PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(IrTxRx PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(TurretControllers PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

#### Uncomment below additional settings as needed.
set(${CMAKE_PROJECT_NAME}_BOARD mega)
set(${CMAKE_PROJECT_NAME}_PORT /dev/ttyACM0)
set(mega.build.mcu atmega2560)
set(mega.upload.protocol wiring)
set(mega.upload.speed 115200)
generate_arduino_firmware(${CMAKE_PROJECT_NAME})